--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "marked": "^0.3.19",
+    "npm": "^5.8.0",
     "nuxt": "^1.0.0",
+    "storyblok-nuxt": "0.0.3",
     "vuetify": "^1.0.0"
   },
   "devDependencies": {
@@ -24,6 +27,8 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^6.0.7",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
   }
